put some order on the buildout mess

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,42 +25,13 @@ extends =
     http://dist.plone.org/release/4.2.1/versions.cfg
     https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
     http://dist.plone.org/release/4.2-latest/versions.cfg
-
+    sources.cfg
+    checkouts.cfg
+    versions.cfg
 
 dump-picked-versions-file = picked.cfg
 sources = sources
 sources-dir = ${buildout:directory}/src
-
-allow-picked-versions = true
-
-# These are packages that contain documentation in them
-auto-checkout =
-    plone.app.portlets
-    plone.app.viewletmanager
-    plone.app.contentrules
-    Products.ResourceRegistries
-    Products.GenericSetup
-    Products.DCWorkflow
-    plone.app.contentrules
-    plone.app.workflow
-    Products.CMFEditions
-    plone.app.testing
-    plone.api
-    Products.TinyMCE
-    tutorials.todoapp
-    ploneorg.admin
-    sphinxcontrib.contributors
-
-# these can be removed after upcoming release
-    transmogrify.webcrawler
-    transmogrify.htmlcontentextractor
-    transmogrify.ploneremote
-    transmogrify.htmltesting
-    transmogrify.siteanalyser
-    transmogrify.command
-    funnelweb
-    mr.migrator
-
 
 allow-picked-versions = true
 
@@ -110,35 +81,3 @@ recipe = zc.recipe.egg
 eggs =
   funnelweb
   transmogrify.command
-
-
-[versions]
-roadrunner = 0.2.3.1
-zc.recipe.egg = 1.2.0
-
-# Some pindowns to make sure Sphinx + dependencies don't go havoc
-collective.recipe.sphinxbuilder = 0.7.0
-Sphinx = 1.1.3
-docutils = 0.9.1
-Docutils = 0.9.1
-
-# Make sure you use public Github URL here!
-[sources]
-Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
-plone.api = git git://github.com/plone/plone.api.git
-tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
-
-ploneorg.admin = git git://github.com/plone/ploneorg.admin.git egg=false
-sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
-
-# funnelweb
-transmogrify.webcrawler = git git@github.com:djay/transmogrify.webcrawler.git
-transmogrify.htmlcontentextractor = git git@github.com:djay/transmogrify.htmlcontentextractor.git
-transmogrify.ploneremote = git git@github.com:djay/transmogrify.ploneremote.git
-transmogrify.htmltesting = git git@github.com:djay/transmogrify.htmltesting.git
-transmogrify.siteanalyser = git git@github.com:djay/transmogrify.siteanalyser.git
-transmogrify.command = git git@github.com:djay/transmogrify.command.git
-funnelweb = git git@github.com:collective/funnelweb.git
-mr.migrator = git git@github.com:collective/mr.migrator.git
-
-
