--- a/sources.cfg
+++ b/sources.cfg
@@ -1,6 +1,23 @@
 # auto-checkout has moved to checkouts.cfg so it's easier to extend sources.cfg
-
 [sources]
+Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
+plone.api = git git://github.com/plone/plone.api.git
+tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
+ploneorg.admin = git git://github.com/plone/ploneorg.admin.git egg=false
+sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
+
+# funnelweb
+transmogrify.webcrawler = git git@github.com:collective/transmogrify.webcrawler.git
+transmogrify.htmlcontentextractor = git git@github.com:collective/transmogrify.htmlcontentextractor.git
+transmogrify.ploneremote = git git@github.com:collective/transmogrify.ploneremote.git
+transmogrify.htmltesting = git git@github.com:collective/transmogrify.htmltesting.git
+transmogrify.siteanalyser = git git@github.com:collective/transmogrify.siteanalyser.git
+transmogrify.command = git git@github.com:collective/transmogrify.command.git
+funnelweb = git git@github.com:collective/funnelweb.git
+mr.migrator = git git@github.com:collective/mr.migrator.git
+
+# XXX: can we get rid of this?
+[sources-XXX]
 Zope2                               = svn http://svn.zope.org/repos/main/Zope/branches/2.13
 ZODB3                               = svn http://svn.zope.org/repos/main/ZODB/branches/3.10
 Plone                               = git https://github.com/plone/Plone.git
