change schema to avoid timeouts on RSA key fingerprints

--- a/sources.cfg
+++ b/sources.cfg
@@ -1,10 +1,10 @@
 # auto-checkout has moved to checkouts.cfg so it's easier to extend sources.cfg
 [sources]
-Products.TinyMCE = git git://github.com/plone/Products.TinyMCE
-plone.api = git git://github.com/plone/plone.api.git
-tutorials.todoapp = git git://github.com/collective/tutorial.todoapp.git
-ploneorg.admin = git git://github.com/plone/ploneorg.admin.git egg=false
-sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
+Products.TinyMCE = git git@github.com/plone/Products.TinyMCE
+plone.api = git git@github.com/plone/plone.api.git
+tutorials.todoapp = git git@github.com/collective/tutorial.todoapp.git
+ploneorg.admin = git git@github.com/plone/ploneorg.admin.git egg=false
+sphinxcontrib.contributors = git git@github.com/miohtama/sphinxcontrib.contributors.git
 
 # funnelweb
 transmogrify.webcrawler = git git@github.com:collective/transmogrify.webcrawler.git
