fix repo address

--- a/sources.cfg
+++ b/sources.cfg
@@ -1,6 +1,6 @@
 # auto-checkout has moved to checkouts.cfg so it's easier to extend sources.cfg
 [sources]
-Products.TinyMCE = git git@github.com/plone/Products.TinyMCE
+Products.TinyMCE = git git@github.com/plone/Products.TinyMCE.git
 plone.api = git git@github.com/plone/plone.api.git
 tutorials.todoapp = git git@github.com/collective/tutorial.todoapp.git
 ploneorg.admin = git git@github.com/plone/ploneorg.admin.git egg=false
