--- a/sources.cfg
+++ b/sources.cfg
@@ -1,17 +1,18 @@
 # auto-checkout has moved to checkouts.cfg so it's easier to extend sources.cfg
+
 [sources]
-Products.TinyMCE = git git@github.com/plone/Products.TinyMCE.git
-plone.api = git git@github.com/plone/plone.api.git
-tutorials.todoapp = git git@github.com/collective/tutorial.todoapp.git
-ploneorg.admin = git git@github.com/plone/ploneorg.admin.git egg=false
-sphinxcontrib.contributors = git git@github.com/miohtama/sphinxcontrib.contributors.git
+Products.TinyMCE = git ${remotes:plone}/Products.TinyMCE.git pushurl=${remotes:plone_push}/Products.TinyMCE.git
+plone.api = git ${remotes:plone}/plone.api.git pushurl=${remotes:plone_push}/plone.api.git
+tutorials.todoapp = git ${remotes:collective}/tutorial.todoapp.git  pushurl=${remotes:collective_push}/tutorial.todoapp.git
+ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git ${remotes:plone_push}/ploneorg.admin.git egg=false
+sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
 
 # funnelweb
-transmogrify.webcrawler = git git@github.com:collective/transmogrify.webcrawler.git
-transmogrify.htmlcontentextractor = git git@github.com:collective/transmogrify.htmlcontentextractor.git
-transmogrify.ploneremote = git git@github.com:collective/transmogrify.ploneremote.git
-transmogrify.htmltesting = git git@github.com:collective/transmogrify.htmltesting.git
-transmogrify.siteanalyser = git git@github.com:collective/transmogrify.siteanalyser.git
-transmogrify.command = git git@github.com:collective/transmogrify.command.git
-funnelweb = git git@github.com:collective/funnelweb.git
-mr.migrator = git git@github.com:collective/mr.migrator.git
+transmogrify.webcrawler = git ${remotes:collective}/transmogrify.webcrawler.git
+transmogrify.htmlcontentextractor = git ${remotes:collective}/transmogrify.htmlcontentextractor.git
+transmogrify.ploneremote = git ${remotes:collective}/transmogrify.ploneremote.git
+transmogrify.htmltesting = git git://github.com/djay/transmogrify.htmltesting.git
+transmogrify.siteanalyser = git ${remotes:collective}/transmogrify.siteanalyser.git
+transmogrify.command = git ${remotes:collective}/transmogrify.command.git
+funnelweb = git ${remotes:collective}/funnelweb.git
+mr.migrator = git ${remotes:collective}/mr.migrator.git
