add missing parameter

--- a/sources.cfg
+++ b/sources.cfg
@@ -4,7 +4,7 @@
 Products.TinyMCE = git ${remotes:plone}/Products.TinyMCE.git pushurl=${remotes:plone_push}/Products.TinyMCE.git
 plone.api = git ${remotes:plone}/plone.api.git pushurl=${remotes:plone_push}/plone.api.git
 tutorials.todoapp = git ${remotes:collective}/tutorial.todoapp.git  pushurl=${remotes:collective_push}/tutorial.todoapp.git
-ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git ${remotes:plone_push}/ploneorg.admin.git egg=false
+ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git pushurl=${remotes:plone_push}/ploneorg.admin.git egg=false
 sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
 
 # funnelweb
