Add plone.app.robotframework (with its sphinxcontrib-robotdoc-dependency) as external reference manual

--- a/checkouts.cfg
+++ b/checkouts.cfg
@@ -8,6 +8,7 @@ auto-checkout =
     plone.app.contentrules
     plone.app.contentrules
     plone.app.portlets
+    plone.app.robotframework
     plone.app.testing
     plone.app.viewletmanager
     plone.app.workflow
