--- a/sources.cfg
+++ b/sources.cfg
@@ -3,6 +3,7 @@
 [sources]
 Products.TinyMCE = git ${remotes:plone}/Products.TinyMCE.git pushurl=${remotes:plone_push}/Products.TinyMCE.git
 plone.api = git ${remotes:plone}/plone.api.git pushurl=${remotes:plone_push}/plone.api.git
+plone.app.robotframework = git ${remotes:plone}/plone.app.robotframework.git
 tutorials.todoapp = git ${remotes:collective}/tutorial.todoapp.git  pushurl=${remotes:collective_push}/tutorial.todoapp.git
 ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git pushurl=${remotes:plone_push}/ploneorg.admin.git egg=false
 sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
