Use lowercase docutils

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,8 +14,8 @@ extensions =
   buildout.dumppickedversions
 
 extends =
-    https://raw.github.com/plone/buildout.coredev/4.2/sources.cfg
-    http://dist.plone.org/release/4.2-latest/versions.cfg
+    https://raw.github.com/plone/buildout.coredev/4.3/sources.cfg
+    http://dist.plone.org/release/4.3-latest/versions.cfg
     sources.cfg
     checkouts.cfg
     versions.cfg
@@ -37,7 +37,7 @@ source = ${buildout:directory}/source
 build = ${buildout:directory}/build
 eggs =
     Sphinx
-    Docutils
+    docutils
     roman
     Pygments
     collective.sphinx.includedoc
