--- a/versions.cfg
+++ b/versions.cfg
@@ -4,5 +4,4 @@ zc.recipe.egg = 1.2.0
 # Some pindowns to make sure Sphinx + dependencies don't go havoc
 collective.recipe.sphinxbuilder = 0.7.0
 Sphinx = 1.1.3
-docutils = 0.9.1
-Docutils = 0.9.1
+#Docutils = 0.9.1
