Added script to capture widgets demo output

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -8,6 +8,7 @@
 parts =
     sphinx
     funnelweb
+    instance-widget-capture
 
 extensions =
   mr.developer
@@ -58,3 +59,17 @@ recipe = zc.recipe.egg
 eggs =
   funnelweb
   transmogrify.command
+
+
+# Plone instance used to create the widget capture page
+[instance-widget-capture]
+recipe = plone.recipe.zope2instance
+blob-storage = ${buildout:directory}/var/blobstorage
+user = admin:admin
+http-address = 8080
+debug-mode = on
+verbose-security = on
+eggs =
+    Pillow
+    Plone
+
