Polishing capture script

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ parts =
     sphinx
     funnelweb
     instance-widget-capture
+    plonesite-widget-capture
 
 extensions =
   mr.developer
@@ -66,10 +67,20 @@ eggs =
 recipe = plone.recipe.zope2instance
 blob-storage = ${buildout:directory}/var/blobstorage
 user = admin:admin
-http-address = 8080
+http-address = 127.0.0.1:9090
 debug-mode = on
 verbose-security = on
 eggs =
     Pillow
     Plone
+
+[plonesite-widget-capture]
+recipe = collective.recipe.plonesite
+site-id = Plone
+instance = instance-widget-capture
+host = localhost
+protocol = http
+port = 9090
+enabled = true
+site-replace = true
 
