Updated i18n section with the inclusion of the p.a.multilingual relevant developer documentation and the whole manual as a reference_manual

--- a/checkouts.cfg
+++ b/checkouts.cfg
@@ -7,6 +7,7 @@ auto-checkout =
     plone.api
     plone.app.contentrules
     plone.app.contentrules
+    plone.app.multilingual
     plone.app.portlets
     plone.app.robotframework
     plone.app.testing
