add missing checkouts of p.a.dexterity and p.a.theming

--- a/checkouts.cfg
+++ b/checkouts.cfg
@@ -7,10 +7,12 @@ auto-checkout =
     plone.api
     plone.app.contentrules
     plone.app.contentrules
+    plone.app.dexterity
     plone.app.multilingual
     plone.app.portlets
     plone.app.robotframework
     plone.app.testing
+    plone.app.theming
     plone.app.viewletmanager
     plone.app.workflow
     ploneorg.admin
