Added Contributors box

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts =
     funnelweb
     instance-widget-capture
     plonesite-widget-capture
+    contributors-static-assets
 
 extensions =
   mr.developer
@@ -84,3 +85,6 @@ port = 9090
 enabled = true
 site-replace = true
 
+[contributors-static-assets]
+recipe = plone.recipe.command
+command = ./install-sphinx-static-assets.sh
