--- a/checkouts.cfg
+++ b/checkouts.cfg
@@ -5,6 +5,8 @@ always-checkout = force
 # These are packages that contain documentation in them
 auto-checkout =
     plone.api
+    plone.schemaeditor
+    plone.dexterity
     plone.app.contentrules
     plone.app.contentrules
     plone.app.dexterity
