--- a/sources.cfg
+++ b/sources.cfg
@@ -3,6 +3,8 @@
 [sources]
 Products.TinyMCE = git ${remotes:plone}/Products.TinyMCE.git pushurl=${remotes:plone_push}/Products.TinyMCE.git
 plone.api = git ${remotes:plone}/plone.api.git pushurl=${remotes:plone_push}/plone.api.git
+plone.schemaeditor = git ${remotes:plone}/plone.schemaeditor.git pushurl=${remotes:plone_push}/plone.schemaeditor.git
+plone.dexterity = git ${remotes:plone}/plone.dexterity.git pushurl=${remotes:plone_push}/plone.dexterity.git
 plone.app.dexterity = git ${remotes:plone}/plone.app.dexterity.git
 plone.app.robotframework = git ${remotes:plone}/plone.app.robotframework.git
 plone.app.multilingual = git ${remotes:plone}/plone.app.multilingual.git pushurl=${remotes:plone_push}/plone.app.multilingual.git
