Add p.a.robotramework into sphinx-build -paths

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,6 +47,7 @@ eggs =
     collective.sphinx.autoatschema
     Products.CMFPlone
     plone.api
+    plone.app.robotframework
     sphinxcontrib.contributors
     sphinxcontrib-robotdoc
     ipdb
