update the buildout.cfg to add transifex

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,14 +7,16 @@
 [buildout]
 parts =
     sphinx
+    sphinx-intl
+    transifex-client
     funnelweb
-    instance-widget-capture
-    plonesite-widget-capture
-    contributors-static-assets
+#    instance-widget-capture
+#    plonesite-widget-capture
+#    contributors-static-assets
 
 extensions =
   mr.developer
-  buildout.dumppickedversions
+#  buildout.dumppickedversions
 
 extends =
     https://raw.github.com/plone/buildout.coredev/4.3/sources.cfg
@@ -51,6 +53,15 @@ eggs =
     sphinxcontrib.contributors
     sphinxcontrib-robotdoc
     ipdb
+
+[sphinx-intl]
+recipe = zc.recipe.egg
+eggs = sphinx-intl[transifex]
+
+[transifex-client]
+recipe = zc.recipe.egg
+eggs =
+    transifex-client
 
 #
 # To run funnelweb use $ bin/funnelweb --pipeline=pandoc.cfg
