Disable checkout of admin docs

--- a/checkouts.cfg
+++ b/checkouts.cfg
@@ -17,7 +17,7 @@ auto-checkout =
     plone.app.theming
     plone.app.viewletmanager
     plone.app.workflow
-    ploneorg.admin
+#    ploneorg.admin
     Products.CMFEditions
     Products.DCWorkflow
     Products.GenericSetup
