--- a/sources.cfg
+++ b/sources.cfg
@@ -10,7 +10,7 @@ plone.app.robotframework = git ${remotes:plone}/plone.app.robotframework.git
 plone.app.multilingual = git ${remotes:plone}/plone.app.multilingual.git pushurl=${remotes:plone_push}/plone.app.multilingual.git
 plone.app.theming = git ${remotes:plone}/plone.app.theming.git
 tutorials.todoapp = git ${remotes:collective}/tutorial.todoapp.git  pushurl=${remotes:collective_push}/tutorial.todoapp.git
-ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git pushurl=${remotes:plone_push}/ploneorg.admin.git egg=false
+#ploneorg.admin = git ${remotes:plone}/ploneorg.admin.git pushurl=${remotes:plone_push}/ploneorg.admin.git egg=false
 sphinxcontrib.contributors = git git://github.com/miohtama/sphinxcontrib.contributors.git
 
 
